add negative sampling reference #42

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -225,18 +225,17 @@ or feature vector input data types and outlier detection methods that include
  Isolation Forest, Discovery via Eigenbasis Modeling of Uninteresting Data 
  (DEMUD)~\citep{wagstaff:demud13}, principal component analysis (PCA),
    Reed-Xiaoli (RX) detector,  
- Local RX, negative sampling, and probabilistic autoencoder. Given a set of
-  data samples, each algorithm assigns an outlier score to each sample. DORA
-   provides results organization and visualization modules to help users 
-   process the results, including sorting samples by outlier score, evaluating 
-   outlier recall for a set of known/labeled outliers, clustering groups of 
-   similar outliers together, and causal graphs. To demonstrate the 
-   cross-domain applicability of DORA, we conducted outlier detection
-    experiments for three real-world use cases: 1) cleaning noisy ground-truth 
-    datasets (Earth Science), 
-     2) flagging non-astrophysical objects in the Dark Energy Survey 
-     (astrophysics), and 3) novelty-guided onboard targeting of instruments
-      for Mars rovers (planetary science). [We showed that ...]
+ Local RX, negative sampling~\cite{sipple:neg-sampling20}, and probabilistic 
+ autoencoder. Given a set of data samples, each algorithm assigns an outlier 
+ score to each sample. DORA provides results organization and visualization 
+ modules to help users process the results, including sorting samples by outlier 
+ score, evaluating outlier recall for a set of known/labeled outliers, clustering 
+ groups of similar outliers together, and causal graphs. To demonstrate the 
+ cross-domain applicability of DORA, we conducted outlier detection experiments 
+ for three real-world use cases: 1) cleaning noisy ground-truth datasets (Earth 
+ Science), 2) flagging non-astrophysical objects in the Dark Energy Survey 
+ (astrophysics), and 3) novelty-guided onboard targeting of instruments for Mars 
+ rovers (planetary science). [We showed that ...]
 
 \section{Related Work}
 In astrophysics, 
