add negative sampling ref #42

--- a/publications/iaai21/dora_references.bib
+++ b/publications/iaai21/dora_references.bib
@@ -60,6 +60,18 @@
   year={2021}
 }
 
+
+@InProceedings{sipple:neg-sampling20,
+  title = {Interpretable, Multidimensional, Multimodal Anomaly Detection with Negative Sampling for Detection of Device Failure},
+  author = {Sipple, John},
+  booktitle = {Proceedings of the 37th International Conference on Machine Learning},
+  pages = {9016--9025},
+  year = {2020},
+  volume = {119},
+  month = {13--18 Jul},
+}
+
+
 @Misc{planetdata,
   author =    "Planet Team",
   organization = {Planet},
