--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -235,7 +235,7 @@ or feature vector input data types and outlier detection methods that include
  for three real-world use cases: 1) cleaning noisy ground-truth datasets (Earth 
  Science), 2) flagging non-astrophysical objects in the Dark Energy Survey 
  (astrophysics), and 3) novelty-guided onboard targeting of instruments for Mars 
- rovers (planetary science). [We showed that ...]
+ rovers (planetary science). \todo{[We showed that ...]}
 
 \section{Related Work}
 In astrophysics, 
@@ -292,7 +292,8 @@ defined in the configuration file and loads samples into a dictionary of numpy
 
 \paragraph{Outlier ranking algorithms.} We implemented 7 algorithms for 
 scoring and 
-ranking samples by outlierness. We chose these algorithms to include a diverse
+ranking samples by outlierness. All algorithms are unsupervised.
+We chose these algorithms to include a diverse
 set of approaches to scoring outliers since different algorithms may have 
 better performance for different datasets and use cases. 
 %We describe each
@@ -313,7 +314,10 @@ a mapping between the data samples and a lower-dimensional representation that
  reconstruction error is used to compute the outlier score because samples
   that are unlike the data used to fit the model will be more poorly 
   reconstructed compared to inliers. 
-\todo{Describe PCA: Hannah.}
+Principal component analysis (PCA) has been used for outlier detection by
+scoring samples using the reconstruction error (here, the L2 norm)
+between inputs and their inverse
+ transformation from the principal subspace~\citep{kerner2020comparison}.
 The DEMUD algorithm~\citep{wagstaff:demud13} differs from other
 outlier ranking methods: instead of independently scoring all
 observations, DEMUD incrementally identifies the most unusual
@@ -326,16 +330,29 @@ outliers independently maximize coverage of outliers, while DEMUD
 maximizes the fast discovery of distinct outlier types.
 
 \subparagraph{Distance.}
-\todo{Describe RX and Local RX: Hannah.}
+Distance-based methods score outliers based on their distance from some
+``background'' which is usually defined by a sample distribution. The 
+Reed-Xiaoli (RX) detector is commonly used for anomaly detection in
+multispectral and hyperspectral remote sensing; RX uses the Mahalanobis
+ distance between a sample and a background dataset mean and covariance
+ to score samples~\citep{reed1990adaptive}. The local variant of RX (Local
+ RX or LRX) can be used for image or raster data types and scores each pixel in
+  an image with respect to a window ``ring'' of pixels surrounding 
+  it~\citep{molero2013analysis}. 
+  LRX requires two parameters that define the ring: an outer window which 
+  defines the size of the window surrounding the pixel and an inner window
+   which defines the size of the window around the target pixel to exclude from
+   the background distribution. 
 
 \subparagraph{Sparsity.}
 \todo{Describe isolation forest: Umaa.}
 
 \subparagraph{Likelihood.}
-\todo{Describe PAE: Hannah or Bryce (if it is ready to be included.)}
+\todo{Describe PAE: Hannah or Bryce}
 The negative sampling algorithm is implemented by converting the unsupervised 
-outlier ranking problem into a semi-supervised problem. Negative (anomalous) 
-examples are created by sampling from a expanded space defined by the minimum 
+outlier ranking problem into a semi-supervised 
+problem~\citep{sipple:neg-sampling20}. Negative (anomalous) 
+examples are created by sampling from an expanded space defined by the minimum 
 and maximum values of each dimension of the positive (normal) examples. The 
 negative and positive examples are then used to train a random forest 
 classifier. We use the posterior probabilities of the random forest classifier 
@@ -357,8 +374,8 @@ by outlier score). DORA provides results organization modules intended to help
  evaluation dataset containing known outliers is available, we provide a module
  to assess how well algorithm selections correlate with known outliers. This is
  done by plotting the number of true outliers vs. number of selections made. 
- This can also be represented as the precision at $N$ (\todo{add ref?}), i.e., 
- the number of true outliers divided by the number of selections $N$. Finally,
+ This can also be represented as the precision at $N$, i.e., 
+ the number of true outliers divided by the number of selections $N$~\citep{campos2016evaluation}. Finally,
  we provide a module for plotting histograms of outlier scores to visualize the
  distribution of scores in the dataset (which may be, e.g., multimodal or 
  long-tailed).
