Add selection figure for planetary rover results. (#60,#42)

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -537,6 +537,15 @@ $N=n_{outlier}$ while DEMUD and PCA tied for the lowest AUC.
     \label{fig:faw_results}
 \end{figure}
 
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{figures/planetary_combined_plot.pdf}
+    \caption{Number of true outliers ranked in top $N$ selections for 
+    planetary rover dataset.}
+    \label{fig:planetary_results}
+\end{figure}
+
 %\subsubsection{Volcanic thermal anomalies}
 
 \subsubsection{MNIST and FashionMNIST.}
