--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -418,13 +418,15 @@ centered on each target.
 We simulated the operational setting in which the rover has observed
 targets up through mission day (sol) $s$ and the goal is to rank all
 subsequent targets (after sol $s$) to inform which recent targets
-merit further study.  We organized the Mars target images
-chronologically and partitioned them into the corresponding ``prior''
-set $D_s$ (sols \num{1343} to \num{1693}, $n=992$) and ``assessment''
-set $D_{s+}$ (sols \num{1694} to \num{1703}, $n=58)$. 
+merit further study.  Our rover image data covers sols \num{1343}
+to \num{1703}.  We partitioned the images chronologically to assess
+outlier detection in the 10 most recent sols, using ``prior'' set
+$D_{1343-1693}$ ($n=992$) and ``assessment'' set $D_{1694-1703}$
+($n=58)$ for evaluation.
 
 We collaborated with an MSL science planning team member to
-independently review the targets in $D_{s+}$ and identify those that were
+independently review the targets in $D_{1694-1703}$ and identify those
+that were 
 considered novel by the mission ($n_{outlier} = 9$).  Our goal for
 this application is to assess how well the selections made by each
 algorithm correlate with human novelty judgments to determine which
@@ -487,12 +489,24 @@ cases associated with each dataset domain.
 
 \subsubsection{Targets in Mars rover images.}
 % We initialized each algorithm with $D_s$ and requested a ranking of
-% targets in $D_{s+}$. 
-\todo{Add table showing number (or percentage?) of novel targets in
-the top $N$ selections, where $N$ = known number of novel targets in
-$D_{s+}$.  And/or, report average rank of novel targets if alg ranks all
-$|D_{s+}|$ targets. If time/room permits, do this for different values
-of $s$.} 
+% targets in $D_{s+}$.
+\todo{Consider merging all three data set discussions since they are
+in one table? with their own figures? The point here isn't really to
+compare algs or data sets but instead to show that we CAN compare
+them, using DORA.}
+%
+Table~\ref{tab:faw_results} compares the performance of each ranking 
+algorithm by reporting the precision obtained when the number of
+selections is the same as the total number of outliers.  We could not
+employ RX in this case since the data dimensionality ($64 \times 64 =
+4096$) exceeded the data set size.  We found that
+the Isolation Forest achieved the highest precision (best outlier
+detection) when allowed to select only \num{9} images.
+Figure~\ref{fig:planetary_results} shows the complete (cumulative)
+outlier detection performance for each algorithm when ranking
+all \num{58} target images in $D_{1694-1703}$. \todo{Explain MDR the first
+time it appears. }
+
 
 \subsubsection{Satellite time series for ground-truth observations.}
 We used the full dataset of 6,757 samples to fit the ranking algorithms and
@@ -505,7 +519,8 @@ for each algorithm to give a quantitative comparison of the curves.
 Table \ref{tab:faw_results} gives the precision at $N$ where
 $N=n_{outlier}=37$. The negative sampling algorithm had the best performance
 in both metrics. DEMUD, PCA, and PAE tied for the lowest precision at 
-$N=n_{outlier}$ while DEMUD and PCA tied for the lowest AUC.
+$N=n_{outlier}$ while DEMUD and PCA tied for the lowest
+AUC. \todo{For completeness, Explain why no LRX here.}
 
 \begin{table}
   \caption{Precision at $N=n_{outlier}$ for three applications; the
@@ -514,23 +529,31 @@ $N=n_{outlier}$ while DEMUD and PCA tied for the lowest AUC.
   \centering
   \begin{tabular}{l|ccc}
     \hline
-    Algorithm & Earth & Planetary & Astrophysics \\
+    Algorithm & Astrophysics & Earth & Planetary \\
     \hline
-    PCA               & 0.41 & 0.44 \\
-    DEMUD             & 0.41 & 0.44 \\
+    PCA               & & 0.41 & 0.44 \\
+    DEMUD             & & 0.41 & 0.44 \\
     \hline
-    RX                & 0.43 & ---- \\
-    LRX               & ---- & 0.33 \\
+    RX                & & 0.43 & ---- \\
+    LRX               & & ---- & 0.33 \\
     \hline
-    Isolation Forest  & 0.46 & \textbf{0.56} \\
+    Isolation Forest  & & 0.46 & \textbf{0.56} \\
     \hline
-    PAE               & 0.41 & 0.22 \\
-    Neg. Sampling & \textbf{0.49} & 0.33 \\
+    PAE               & & 0.41 & 0.22 \\
+    Neg. Sampling & & \textbf{0.49} & 0.33 \\
     \hline
-    Random            & 0.32 & 0.11 \\
+    Random            & & 0.32 & 0.11 \\
     \hline
   \end{tabular}
 \end{table}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{figures/planetary_combined_plot.pdf}
+    \caption{Number of true outliers ranked in top $N$ selections for 
+    planetary rover dataset.}
+    \label{fig:planetary_results}
+\end{figure}
 
 \begin{figure}
     \centering
@@ -540,14 +563,6 @@ $N=n_{outlier}$ while DEMUD and PCA tied for the lowest AUC.
     \label{fig:faw_results}
 \end{figure}
 
-
-\begin{figure}
-    \centering
-    \includegraphics[width=\linewidth]{figures/planetary_combined_plot.pdf}
-    \caption{Number of true outliers ranked in top $N$ selections for 
-    planetary rover dataset.}
-    \label{fig:planetary_results}
-\end{figure}
 
 %\subsubsection{Volcanic thermal anomalies}
 
