--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -285,7 +285,7 @@ $N$-band rasters. $N$-band rasters are essentially images in which every pixel
 is associated with a location defined by a geographic coordinate reference 
 system (e.g., latitude/longitude in degrees). Most satellite data are 
 distributed as rasters; common formats include GeoTIFF, NetCDF, and 
-\todo{HDF}. A data loader for each data type locates the data by the path(s)
+HDF. A data loader for each data type locates the data by the path(s)
 defined in the configuration file and loads samples into a dictionary of numpy
  arrays indexed by the sample id. This \texttt{data\_dict} is then passed to each of the ranking algorithms specified in 
  the configuration file.
@@ -345,10 +345,15 @@ multispectral and hyperspectral remote sensing; RX uses the Mahalanobis
    the background distribution. 
 
 \subparagraph{Sparsity.}
-\todo{Describe isolation forest: Umaa.}
+Sparsity-based methods score outliers based on how isolated or sparse they
+are in the feature space. Isolation forests are a common sparsity-based method
+that constructs many random binary trees from a 
+dataset~\cite{liu2008isolation}. The outlier score for
+a sample is quantified as the average distance from the root to the item’s 
+leaf. Shorter distances are indicative of outliers because fewer splits were 
+required to isolate the sample.
 
 \subparagraph{Likelihood.}
-\todo{Describe PAE: Hannah or Bryce}
 The negative sampling algorithm is implemented by converting the unsupervised 
 outlier ranking problem into a semi-supervised 
 problem~\citep{sipple:neg-sampling20}. Negative (anomalous) 
@@ -357,7 +362,7 @@ and maximum values of each dimension of the positive (normal) examples. The
 negative and positive examples are then used to train a random forest 
 classifier. We use the posterior probabilities of the random forest classifier 
 as outlier scores, which means that the observations with higher posterior 
-probabilities are more likely to be outliers.
+probabilities are more likely to be outliers. \todo{Describe PAE: Hannah or Bryce}
 
 \paragraph{Results organization.} 
 Each of the outlier ranking algorithms returns an array containing the sample
