--- a/publications/iaai21/dora_references.bib
+++ b/publications/iaai21/dora_references.bib
@@ -1,3 +1,12 @@
+@inproceedings{liu2008isolation,
+  title={Isolation forest},
+  author={Liu, Fei Tony and Ting, Kai Ming and Zhou, Zhi-Hua},
+  booktitle={2008 eighth ieee international conference on data mining},
+  pages={413--422},
+  year={2008},
+  organization={IEEE}
+}
+
 @article{molero2013analysis,
   title={Analysis and optimizations of global and local versions of the RX algorithm for anomaly detection in hyperspectral data},
   author={Molero, Jos{\'e} Manuel and Garzon, Ester M and Garcia, Inmaculada and Plaza, Antonio},
