Add description of PAE. #42

--- a/publications/iaai21/dora_references.bib
+++ b/publications/iaai21/dora_references.bib
@@ -1,3 +1,10 @@
+@article{bohm2020probabilistic,
+  title={Probabilistic auto-encoder},
+  author={B{\"o}hm, Vanessa and Seljak, Uro{\v{s}}},
+  journal={arXiv preprint arXiv:2006.05479},
+  year={2020}
+}
+
 @inproceedings{liu2008isolation,
   title={Isolation forest},
   author={Liu, Fei Tony and Ting, Kai Ming and Zhou, Zhi-Hua},
