--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -353,7 +353,7 @@ a sample is quantified as the average distance from the root to the item’s
 leaf. Shorter distances are indicative of outliers because fewer splits were 
 required to isolate the sample.
 
-\subparagraph{Likelihood.}
+\subparagraph{Probability.}
 The negative sampling algorithm is implemented by converting the unsupervised 
 outlier ranking problem into a semi-supervised 
 problem~\citep{sipple:neg-sampling20}. Negative (anomalous) 
@@ -362,7 +362,14 @@ and maximum values of each dimension of the positive (normal) examples. The
 negative and positive examples are then used to train a random forest 
 classifier. We use the posterior probabilities of the random forest classifier 
 as outlier scores, which means that the observations with higher posterior 
-probabilities are more likely to be outliers. \todo{Describe PAE: Hannah or Bryce}
+probabilities are more likely to be outliers. 
+The probabilistic autoencoder is a generative model consisting of an 
+autoencoder trained to reconstruct input data which is interpreted
+probabilistically after training using a normalizing flow on the autoencoder
+latent space~\cite{bohm2020probabilistic}. 
+Samples are scored as outliers using the log likelihood in the latent
+distribution, the autoencoder reconstruction error, or a combination of
+the two.
 
 \paragraph{Results organization.} 
 Each of the outlier ranking algorithms returns an array containing the sample
@@ -471,8 +478,9 @@ Many Earth science applications using satellite Earth observation (EO) data
   by the dataset. Our goal for this application is to assess how well the 
   selections made by each algorithm correlate with outliers determined by
   visual inspection of the satellite images.
- \todo{If we have time, I want to also evaluate the downstream classifier
- performance before and after removing top N outliers with DORA.}
+% descoped for lack of time and space
+% \todo{If we have time, I want to also evaluate the downstream classifier
+% performance before and after removing top N outliers with DORA.}
 
 % Decided to cut this use case to make the presentation simpler (only one
 % Earth science use case, and we already have a 1-band image dataset
@@ -481,8 +489,7 @@ Many Earth science applications using satellite Earth observation (EO) data
 
 \subsubsection{MNIST and FashionMNIST.}
 We added this to demonstrate the capabilities of DORA with a traditional
-benchmark dataset. \todo{Bryce. TBD if we will end up including due to
-space and/or relevance.}
+benchmark dataset. \todo{Bryce.}
 
 \subsection{Results}
 In this section we discuss the experimental setup and results for each dataset.
@@ -532,9 +539,9 @@ AUC. \todo{For completeness, Explain why no LRX here.}
   best result for each data set is in bold.}
   \label{tab:faw_results}
   \centering
-  \begin{tabular}{l|ccc}
+  \begin{tabular}{l|cccc}
     \hline
-    Algorithm & Astrophysics & Earth & Planetary \\
+    Algorithm & Astro. & Earth & Planetary & FMNIST \\
     \hline
     PCA               & & 0.41 & 0.44 \\
     DEMUD             & & 0.41 & 0.44 \\
@@ -542,7 +549,7 @@ AUC. \todo{For completeness, Explain why no LRX here.}
     RX                & & 0.43 & ---- \\
     LRX               & & ---- & 0.33 \\
     \hline
-    Isolation Forest  & & 0.46 & \textbf{0.56} \\
+    Iso. Forest  & & 0.46 & \textbf{0.56} \\
     \hline
     PAE               & & 0.41 & 0.22 \\
     Neg. Sampling & & \textbf{0.49} & 0.33 \\
