Add to todo for reorganizing data/results description. #42

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -517,7 +517,9 @@ detection) when allowed to select only \num{9} images.
 Figure~\ref{fig:planetary_results} shows the complete (cumulative)
 outlier detection performance for each algorithm when ranking
 all \num{58} target images in $D_{1694-1703}$. \todo{Hannah: Explain
-MDR the first time it appears. }
+MDR the first time it appears (defined in next section but will move when
+Astrophysics section filled in and results section reorganized pending Kiri's
+suggestion above. }
 
 
 \subsubsection{Satellite time series for ground-truth observations.}
