--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -501,9 +501,9 @@ benchmark dataset. \todo{Bryce.}
     
     \hline
     Astrophysics &   &   &   \\
-    Earth & 6,757  &  37 & 76  \\
+    Earth & 6,757 & 37 & 76  \\
     Planetary &   &   &   \\
-    (F)MNIST &   &   &   \\
+    (F)MNIST & 60,000 & 1,000 & 1,000  \\
     \hline
   \end{tabular}
 \end{table}
@@ -570,18 +570,18 @@ data types.
     \hline
     Algorithm & Astro. & Earth & Planetary & FMNIST \\
     \hline
-    PCA               & & 0.41 & 0.44 \\
-    DEMUD             & & 0.41 & 0.44 \\
+    PCA               & & 0.41 & 0.44 & \textbf{0.84} \\
+    DEMUD             & & 0.41 & 0.44 & \textbf{0.84} \\
     \hline
-    RX                & & 0.43 & ---- \\
-    LRX               & & ---- & 0.33 \\
+    RX                & & 0.43 & ---- & ---- \\
+    LRX               & & ---- & 0.33 & 0.56 \\
     \hline
-    Iso. Forest  & & 0.46 & \textbf{0.56} \\
+    Iso. Forest  & & 0.46 & \textbf{0.56} & 0.74 \\
     \hline
-    PAE               & & 0.41 & 0.44 \\
-    Neg. Sampling & & \textbf{0.49} & 0.33 \\
+    PAE               & & 0.41 & 0.44 & 0.83 \\
+    Neg. Sampling & & \textbf{0.49} & 0.33 & 0.43 \\
     \hline
-    Random            & & 0.32 & 0.11 \\
+    Random            & & 0.32 & 0.11 & 0.49 \\
     \hline
   \end{tabular}
 \end{table}
@@ -602,6 +602,13 @@ data types.
     \label{fig:faw_results}
 \end{figure}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{figures/fmnist_combined_plot.pdf}
+    \caption{Number of true outliers ranked in top $N$ selections for 
+    FMNIST dataset.}
+    \label{fig:faw_results}
+\end{figure}
 
 \section{Discussion}
 \todo{ 
